ajustement contraste et formulaire.

--- a/style.css
+++ b/style.css
@@ -730,7 +730,7 @@ h4 {
 }
 
 .white {
-    color: #000!important;
+    color: #fff!important;
 }
 
 .portfolio-thumb {
@@ -765,11 +765,11 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #94360A;
 }
 
 .tc-white {
-    color: #FFF!important;
+    color: #fff!important;
 }
 
 .btn-atomic-tangerine {
